--- a/home.html
+++ b/home.html
@@ -49,7 +49,7 @@
     <div class="container">
         <div class="top_grid">
             <img src="https://i.imgur.com/F7yo2Gc.png" class="top_image">
-            <img src="https://i.imgur.com/I8owg76.png" class="top_image right">
+            <img src="https://imgur.com/Dfwdq9D.png" class="top_image right">
         </div>
         <div class="card_grid">
             <p class="title">Dokumenty</p>
@@ -57,7 +57,7 @@
             <button class="main_button all_documents" onclick="sendTo('documents')">Wszystkie</button>
         </div>
         <div class="card" onclick="sendTo('card')">
-            <img class="background" src="https://i.imgur.com/WB20A6D.png">
+            <img class="background" src="https://imgur.com/ZO7mNn1.png">
             <img class="human" src="https://i.imgur.com/L7PU7Xk.png">
             <div class="id_bottom">
                 <p class="name">mDowód</p>
@@ -71,7 +71,7 @@
         <div class="services_grid">
             <div class="service_box">
                 <img class="service_box_icon" src="https://i.imgur.com/zIiL6A2.png">
-                <p class="service_box_name">Bezpiecznie w sieci</p>
+                <p class="service_box_name">Bezpiecznie<br>w sieci</p>
             </div>
             <div class="service_box">
                 <img class="service_box_icon" src="https://i.imgur.com/ee4CMJf.png">
